# axon

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  typos.toml
.github/workflows/: container.yaml  lints.yaml  nix.yaml  release.yaml  rust.yaml
axon/: Cargo.toml
axon/src/: consts.rs  error.rs  main.rs
axon/src/cli/: attach.rs  create.rs  delete.rs  error.rs  execute.rs  list.rs  mod.rs  port_forward.rs
axon/src/cli/image/: list.rs  mod.rs
axon/src/cli/internal/: api_pod.rs  mod.rs  resource.rs
axon/src/cli/ssh/: connect.rs  copy.rs  get.rs  mod.rs  put.rs  setup.rs  shell.rs
axon/src/cli/ssh/internal/: configurator.rs  file_transfer.rs  handle_guard.rs  mod.rs  transfer.rs
axon/src/config/: error.rs  image_pull_policy.rs  log.rs  mod.rs  port_mapping.rs  service_ports.rs  spec.rs
axon/src/config/templates/: basic.yaml
axon/src/consts/: k8s.rs  mod.rs
axon/src/ext/: api_pod.rs  mod.rs  pod.rs
axon/src/pod_console/: error.rs  mod.rs
axon/src/port_forwarder/: error.rs  mod.rs
axon/src/ssh/: error.rs  mod.rs  session.rs
axon/src/ui/: file_transfer_progress_bar.rs  mod.rs
axon/src/ui/fuzzy_finder/: mod.rs  pod_list.rs
axon/src/ui/table/: image_ext.rs  mod.rs  pod_list_ext.rs  spec_ext.rs
axon/src/ui/terminal/: error.rs  mod.rs
crates/base/: Cargo.toml
crates/base/src/: config.rs  consts.rs  lib.rs
crates/cli/: Cargo.toml
dev-support/containers/: docker-bake.hcl
dev-support/containers/alpine/: Containerfile
devshell/: default.nix  format.nix  nfpm.yaml  package-nfpm.nix  package-static.nix  package-tarball.nix  package.nix
