[package]
name                   = "axon"
description            = "Axon"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing            = { workspace = true }
tracing-journald   = { workspace = true }
tracing-subscriber = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

k8s-openapi = { workspace = true }
kube        = { workspace = true }

futures    = { workspace = true }
sigfinn    = { workspace = true }
tokio      = { workspace = true }
tokio-fd   = { workspace = true }
tokio-util = { workspace = true }

clap          = { workspace = true }
clap_complete = { workspace = true }
comfy-table   = { workspace = true }
crossterm     = { workspace = true }
directories   = { workspace = true }
indicatif     = { workspace = true }
resolve-path  = { workspace = true }
shadow-rs     = { workspace = true }
shell-escape  = { workspace = true }
skim          = { workspace = true }
snafu         = { workspace = true }

russh      = { workspace = true }
russh-sftp = { workspace = true }

axon-base = { workspace = true }
axon-cli  = { workspace = true }

[build-dependencies]
k8s-openapi = { workspace = true }

shadow-rs = { workspace = true }

[lints]
workspace = true
