[package]
name                   = "axon-base"
description            = "Axon Base: Foundational utilities and shared logic for the Axon CLI."
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde = { workspace = true }

tokio = { workspace = true }

directories = { workspace = true }
semver      = { workspace = true }
snafu       = { workspace = true }

[lints]
workspace = true
